--- a/aik-app/aik-api/src/main/resources/application.yml
+++ b/aik-app/aik-api/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   # datasource
   datasource:
-    url: jdbc:mysql://localhost:3306/aikang?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://104.224.159.254:3306/aikang?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: As_123456
     type: com.alibaba.druid.pool.DruidDataSource
