--- a/aik-app/aik-manager/pom.xml
+++ b/aik-app/aik-manager/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.aik.app</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
+    <packaging>war</packaging>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>aik-manager</artifactId>
@@ -35,47 +36,48 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!--spring boot - tomcat-->
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.boot</groupId>-->
-        <!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
-        <!--<scope>provided</scope>-->
-        <!--</dependency>-->
-        <dependency>  
-         <groupId>org.springframework.boot</groupId>  
-         <artifactId>spring-boot-starter-thymeleaf</artifactId>  
-		</dependency> 
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-devtools</artifactId>
-		    <optional>true</optional>
-		</dependency>
-		<dependency>  
-      	 <groupId>net.sourceforge.nekohtml</groupId>  
-       	 <artifactId>nekohtml</artifactId>  
-      	 <version>1.9.22</version>
-      	 </dependency>  
-		
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+            <version>1.9.22</version>
+        </dependency>
+
     </dependencies>
-    
+
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>src/main/webapp</directory>
+                <excludes>
+                    <exclude>static/**</exclude>
+                </excludes>
+            </resource>
+        </resources>
+        <finalName>aik-manager</finalName>
         <plugins>
-	         <plugin>
-	            <groupId>org.springframework.boot</groupId>
-	            <artifactId>spring-boot-maven-plugin</artifactId>
-	        </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.1.1</version>
                 <configuration>
-                    <webResources>
-                        <resource>
-                            <!-- this is relative to the pom.xml directory -->
-                            <directory>target</directory>
-                        </resource>
-                    </webResources>
-                    <warName>aik-manager</warName>
+                    <warSourceExcludes>templates/**</warSourceExcludes>
                 </configuration>
             </plugin>
         </plugins>
