--- a/aik-app/aik-common-service/pom.xml
+++ b/aik-app/aik-common-service/pom.xml
@@ -25,11 +25,11 @@
         </dependency>
         
          <!--pagehelper -->
-        <dependency>
+        <!-- <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.1.1</version>
-        </dependency>
+        </dependency> -->
         <!-- Inside -->
     </dependencies>
 </project>
