--- a/aik-app/aik-manager/src/main/resources/application.yml
+++ b/aik-app/aik-manager/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   # datasource
   datasource:
-    url: jdbc:mysql://localhost:3306/aikang?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: daixiangning
-    password: 123456
+    url: jdbc:mysql://104.224.159.254:3306/aikang?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: As_123456
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
     # 初始化大小，最小，最大
@@ -69,4 +69,4 @@ system:
 # logger
 logging:
   level:
-    com.aik: INFO
+    com.aik: DEBUG
