增加图片上传

--- a/aik-app/aik-manager/src/main/resources/application.yml
+++ b/aik-app/aik-manager/src/main/resources/application.yml
@@ -58,7 +58,7 @@ server:
 
 file:
 # windows
-  upload-root-uri: "C:/Users/as/Pictures/"
+  upload-root-uri: "H:/Users/as/Pictures/"
 # linux
 #  upload-root-uri: "/usr/soft/file/"
   mapping-root-uri: "/file"
