--- a/aik-app/aik-manager/src/main/resources/application.yml
+++ b/aik-app/aik-manager/src/main/resources/application.yml
@@ -58,7 +58,7 @@ server:
 
 file:
 # windows
-  upload-root-uri: "H:/Users/as/Pictures/"
+  upload-root-uri: "C:/Users/as/Pictures/"
 # linux
 #  upload-root-uri: "/usr/soft/file/"
   mapping-root-uri: "/file"
@@ -69,4 +69,5 @@ system:
 # logger
 logging:
   level:
-    com.aik: DEBUG
+    com.aik: debug
+
