--- a/aik-app/aik-util/pom.xml
+++ b/aik-app/aik-util/pom.xml
@@ -23,10 +23,10 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-        <!--fastjson-->
+        <!--jackson-->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
         <!--httpComponents-->
         <dependency>
