【1.0.0-api】 拆分获取用户关注医生、用户接口 新增查看关注用户互助圈接口

--- a/aik-app/aik-api/src/main/resources/application.yml
+++ b/aik-app/aik-api/src/main/resources/application.yml
@@ -58,9 +58,9 @@ jwt:
 # file
 file:
 # windows
-#  upload-root-uri: "C:/Users/as/Pictures/"
+  upload-root-uri: "C:/Users/as/Pictures/"
 # linux
-  upload-root-uri: "/usr/soft/file/"
+#  upload-root-uri: "/usr/soft/file/"
   mapping-root-uri: "/file"
 # system
 system:
