--- a/aik-app/aik-api/pom.xml
+++ b/aik-app/aik-api/pom.xml
@@ -54,11 +54,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!--spring boot - tomcat-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
-            <!--<scope>provided</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>commons-fileupload</groupId>
