【1.0.0 API】 医生端校验用户名与密码

--- a/aik-app/aik-api/src/main/resources/application.yml
+++ b/aik-app/aik-api/src/main/resources/application.yml
@@ -37,6 +37,9 @@ spring:
       enabled: true
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
+  devtools:
+    restart:
+      enabled: true   #热部署生效
 # mybatis
 mybatis:
   type-aliases-package: com.aik.model
