--- a/aik-app/aik-api/pom.xml
+++ b/aik-app/aik-api/pom.xml
@@ -54,11 +54,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!--spring boot - tomcat-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>commons-fileupload</groupId>
@@ -74,12 +74,6 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
                 <configuration>
-                    <webResources>
-                        <resource>
-                            <!-- this is relative to the pom.xml directory -->
-                            <directory>target</directory>
-                        </resource>
-                    </webResources>
                     <warName>aik</warName>
                 </configuration>
             </plugin>
