--- a/aik-app/aik-manager/src/main/resources/application-dev.yml
+++ b/aik-app/aik-manager/src/main/resources/application-dev.yml
@@ -62,6 +62,7 @@ file:
   mapping-root-uri: "/file"
 # system
 system:
+  api-uri: "http://localhost/aik"
   manager-uri: "http://localhost/aik-manager"
 # logger
 logging:
