--- a/aik-app/pom.xml
+++ b/aik-app/pom.xml
@@ -24,13 +24,15 @@
     </parent>
 
     <properties>
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
         <mybatis.spring.boot>1.3.0</mybatis.spring.boot>
         <commons.lang3.version>3.4</commons.lang3.version>
         <commons.io.version>2.4</commons.io.version>
         <com.alibaba.version>1.0.14</com.alibaba.version>
         <io.jsonwebtoken.vesion>0.7.0</io.jsonwebtoken.vesion>
         <httpcomponents.version>4.5.2</httpcomponents.version>
+        <zxing.version>3.3.1</zxing.version>
+        <hibernate.validator.version>5.4.1.Final</hibernate.validator.version>
     </properties>
 
     <dependencyManagement>
@@ -65,6 +67,16 @@
                 <artifactId>httpclient</artifactId>
                 <version>${httpcomponents.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.zxing</groupId>
+                <artifactId>core</artifactId>
+                <version>${zxing.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.zxing</groupId>
+                <artifactId>javase</artifactId>
+                <version>${zxing.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -87,6 +99,11 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate.validator.version}</version>
         </dependency>
     </dependencies>
 
