--- a/aik-app/aik-util/pom.xml
+++ b/aik-app/aik-util/pom.xml
@@ -42,5 +42,10 @@
             <groupId>com.google.zxing</groupId>
             <artifactId>javase</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.12</version>
+        </dependency>
     </dependencies>
 </project>
